<resources>
    <string name="app_name">TheQuiz</string>
    <string name="Titel">The Quiz</string>
    <string name="Welcome">Welcome to The Quiz</string>
    <string name="TextEnterName">Please enter your name</string>
    <string name="Start">Start</string>
    <string name="Default">TODO, Default</string>
    <string name="Submit">Submit</string>
    <string name="OutOf">0/5</string>
    <string name="Question">TODO, some text by default</string>
    <string name="Result">Result</string>
    <string name="Star">star</string>
    <string name="Congratulations">Hey, Congratulations!</string>
    <string name="Username">Username</string>
    <string name="score">Your score is 9/10</string>
    <string name="Finish">Finish</string>
    <string name="Nickname">Enter a nickname</string>
    <string name="DeleteAll">Delete All</string>
    <string name="Delete">Delete</string>
    <string name="Read">Read</string>
    <string name="Save">Save</string>
    <string name="EnterANickname">Enter a nickname</string>
    <string name="Name">Name</string>
</resources>