<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ResultActivity">


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/Star"
        app:layout_constraintEnd_toEndOf="@+id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:srcCompat="@drawable/ic_star_"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Congratulations"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/score"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_congratulations"
        app:layout_constraintStart_toStartOf="@+id/tv_congratulations"
        app:layout_constraintTop_toBottomOf="@+id/tv_congratulations" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/Finish"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_score"
        app:layout_constraintStart_toStartOf="@+id/tv_score"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />


</androidx.constraintlayout.widget.ConstraintLayout>